# vrep_sim

./: readme.txt
main_ws/: CMakeLists.txt
main_ws/include/: Driver.hpp  car.h  communication.hpp  coppeliaSimMsg.hpp  global.hpp
main_ws/src/: coppeliaSimMsg.cpp  filter.cpp  global.cpp  main.cpp
matplotlib-cpp-master/matplotlib-cpp-master/: CMakeLists.txt
matplotlib-cpp-master/matplotlib-cpp-master/examples/: animation.cpp
vrep_template-master/: function.hpp  main.cpp  readme.txt
vrep_template-master/core_test/: car.cpp  car.h
vrep_template-master/sim/: SimCar.ttt
